--- a/public/index.html
+++ b/public/index.html
@@ -38,6 +38,7 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
 		<script src="https://res.wx.qq.com/open/js/jweixin-1.4.0.js"></script>
+		<script src="https://map.qq.com/api/js?v=1&key=44YBZ-HO7KV-RZ7P2-U54DX-T36PF-UJF34&libraries=convertor"></script>
 		<script>
 			window.jp0 = function(res) {
 				console.log(res) ;
