--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,7 @@
 			window.wx = wx ;
 		  var image = new Image();
 			image.onload  = function() {
-				document.getElementById('bg').style.backgroundImage = 'url(./bg.png)' ;
+				document.getElementById('bg').style.backgroundImage = 'url(./bg.jpg)' ;
 				var $timer = document.getElementById('timer') ;
 				var count = 3 ;
 				$timer.style.display = 'block' ;
