--- a/public/private.html
+++ b/public/private.html
@@ -18,7 +18,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>胜蓝助手</title>
+    <title>国合助手</title>
   </head>
   <body>
 		<pre style="white-space:pre-wrap">
@@ -26,14 +26,14 @@
 
 生效日期：2019年8月7日 
 
-胜蓝助手是一款由我们提供服务的工具类产品，为说明胜蓝助手会如何收集、使用和存储你的个人信息及你享有何种权利，我们将通过本指引向你阐述相关事宜，其中要点如下：
+国合助手是一款由我们提供服务的工具类产品，为说明国合助手会如何收集、使用和存储你的个人信息及你享有何种权利，我们将通过本指引向你阐述相关事宜，其中要点如下：
 i. 我们将逐一说明我们收集的你的个人信息类型及其对应的用途，以便你了解我们针对某一特定功能所收集的具体个人信息的类别、使用理由及收集方式。
-ii. 当你使用一些功能时，我们会在获得你的同意后，收集你的一些敏感信息，例如你在报备或添加客户时我们会读取你的通讯录，你在上传影像资料时会收集你的照片信息。除非按照相关法律法规要求必须收集，拒绝提供这些信息仅会使你无法使用相关特定功能，但不影响你正常使用胜蓝助手的其他功能。
-iii. 目前，由于需要和第三方进行数据交互以保证业务顺利开展，胜蓝助手会将部分数据，例如手机号在第三方登录平台用于一键登录。
+ii. 当你使用一些功能时，我们会在获得你的同意后，收集你的一些敏感信息，例如你在报备或添加客户时我们会读取你的通讯录，你在上传影像资料时会收集你的照片信息。除非按照相关法律法规要求必须收集，拒绝提供这些信息仅会使你无法使用相关特定功能，但不影响你正常使用国合助手的其他功能。
+iii. 目前，由于需要和第三方进行数据交互以保证业务顺利开展，国合助手会将部分数据，例如手机号在第三方登录平台用于一键登录。
 1.我们收集的信息
-在你使用胜蓝助手服务的过程中，胜蓝助手会按照如下方式收集你在使用服务时主动提供或因为使用服务而产生的信息，用以向你提供服务、优化我们的服务以及保障你的帐号安全：
-1.1 当你使用胜蓝助手服务时，为保障你正常使用我们的服务，维护我们服务的正常运行，改进及优化我们的服务体验以及保障你的帐号安全，我们会收集你的设备型号、操作系统、唯一设备标识符、登陆IP地址、软件版本号、接入网络的方式、类型和状态、网络质量数据、操作日志、服务日志信息等日志信息，这类信息是为提供服务必须收集的基础信息。
-1.3 当你使用胜蓝助手进行报备客户时，你可以从通讯录中添加客户。这些信息会存储在我们的服务器中，因为存储也是实现这一功能所必需的。我们会以加密的方式存储。除非经你自主选择或遵从相关法律法规要求，我们不会对外提供上述信息，或者将其用于该功能以外的其他用途。
+在你使用国合助手服务的过程中，国合助手会按照如下方式收集你在使用服务时主动提供或因为使用服务而产生的信息，用以向你提供服务、优化我们的服务以及保障你的帐号安全：
+1.1 当你使用国合助手服务时，为保障你正常使用我们的服务，维护我们服务的正常运行，改进及优化我们的服务体验以及保障你的帐号安全，我们会收集你的设备型号、操作系统、唯一设备标识符、登陆IP地址、软件版本号、接入网络的方式、类型和状态、网络质量数据、操作日志、服务日志信息等日志信息，这类信息是为提供服务必须收集的基础信息。
+1.3 当你使用国合助手进行报备客户时，你可以从通讯录中添加客户。这些信息会存储在我们的服务器中，因为存储也是实现这一功能所必需的。我们会以加密的方式存储。除非经你自主选择或遵从相关法律法规要求，我们不会对外提供上述信息，或者将其用于该功能以外的其他用途。
 1.4 当你需要上传交易所必须的影像资料时，我们会先征求你的意见调用摄像头或者本地相册。这个是此步骤必不可少的，我们会对该信息进行加密存储，并且不会用于该功能以外的用途。
 另外，根据相关法律法规及国家标准，以下情形中，我们可能会收集、使用你的相关个人信息无需征求你的授权同意：
 1) 与国家安全、国防安全等国家利益直接相关的；与公共安全、公共卫生、公众知情等重大公共利益直接相关的；
@@ -52,7 +52,7 @@ iii. 目前，由于需要和第三方进行数据交互以保证业务顺利开
 我们会按照法律法规规定，将境内收集的用户个人信息存储于中国境内。
 2.2  信息存储的期限
 一般而言，我们仅为实现目的所必需的时间保留你的个人信息，例如：
-手机号码：若你需要使用胜蓝助手服务，我们需要一直保存你的手机号码，以保证你正常使用该服务。
+手机号码：若你需要使用国合助手服务，我们需要一直保存你的手机号码，以保证你正常使用该服务。
 当我们的产品或服务发生停止运营的情形时，我们将以推送通知、公告等形式通知您，并在合理的期限内删除您的个人信息或进行匿名化处理。
 3.信息安全
 我们努力为用户的信息安全提供保障，以防止信息的丢失、不当使用、未经授权访问或披露。
